--- a/templates/home.html
+++ b/templates/home.html
@@ -2,47 +2,27 @@
 <html>
   <head>
     <title>LLJOBS</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
       h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(50, 50, 50);
-        text-align: center;        
-      }
-      #banner {
         width: 100%;
-        height: 360px;
         object-fit: cover;
-      }
-      h2 {
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(100, 100, 100);
-        text-align: center;
-        font-weight: normal;
-      }
-      .body-text {
-        font-family: Roboto;
-         color: rgb(80, 80, 80);
-      }
-      #container {
-        max-width: 720px;
-        margin: 0 auto;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1>Logic-Labs Ltd Ug</h1>
-      <img id="banner" src="https://8d3facd7-d1d4-4010-98b7-3849b8ff8476-00-2sglbaz7r92uh.kirk.replit.dev/static/ll_jobs_b1.jpg" height="320">
-      <h2>About LLJOBS</h2>
-      <p class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet commodo nulla facilisi nullam vehicula ipsum a. Tortor posuere ac ut consequat. Purus gravida quis blandit turpis cursus in hac. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Sed enim ut sem viverra aliquet. Turpis egestas sed tempus urna et pharetra. At quis risus sed vulputate. Hendrerit dolor magna eget est lorem. Etiam sit amet nisl purus in mollis. Posuere ac ut consequat semper viverra nam. Nascetur ridiculus mus mauris vitae. Scelerisque felis imperdiet proin fermentum leo. Ut sem viverra aliquet eget sit amet tellus. Eget lorem dolor sed viverra ipsum nunc aliquet.</p>
-      <h2>Open Position</h2>
-      <p class="body-text">TODO Show the job opennings here</p>
-      <div style="text-align:center;">
-      <button>Contact Us</button>
-      <p>Copyright 2024 Logic-labs</p>
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">Logic-Labs Ltd Ug</h1>
+      <img class="img-fluid" id="banner" src="https://8d3facd7-d1d4-4010-98b7-3849b8ff8476-00-2sglbaz7r92uh.kirk.replit.dev/static/ll_jobs_b1.jpg" height="320">
+      <h2 class="text-center mt-2 mb-4">About LLJOBS</h2>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet commodo nulla facilisi nullam vehicula ipsum a. Tortor posuere ac ut consequat. Purus gravida quis blandit turpis cursus in hac. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Sed enim ut sem viverra aliquet. Turpis egestas sed tempus urna et pharetra. At quis risus sed vulputate. Hendrerit dolor magna eget est lorem. Etiam sit amet nisl purus in mollis. Posuere ac ut consequat semper viverra nam. Nascetur ridiculus mus mauris vitae. Scelerisque felis imperdiet proin fermentum leo. Ut sem viverra aliquet eget sit amet tellus. Eget lorem dolor sed viverra ipsum nunc aliquet.</p>
+      <h2 class="text-center">Open Position</h2>
+      <p>TODO Show the job opennings here</p>
+      <div class="text-center">
+      <button class="btn btn-primary btn-lg">Contact Us</button>
+      <p class="mt-4">Copyright 2024 Logic-labs</p>
       </div>
     </div>
   </body>
