--- a/templates/home.html
+++ b/templates/home.html
@@ -6,19 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1 {
+      #banner {
         width: 100%;
+        height: 360px;
         object-fit: cover;
+        margin-bottom: 16px;
       }
     </style>
   </head>
   <body>
+    {% include 'nav.html' %}
+    <img class="img-fluid" id="banner" src="https://8d3facd7-d1d4-4010-98b7-3849b8ff8476-00-2sglbaz7r92uh.kirk.replit.dev/static/ll_jobs_b1.jpg" >
     <div class="container">
       <h1 class="text-center mt-2 mb-4">
-        {{company_name}} Careers</h1>
-      <img class="img-fluid" id="banner" src="https://8d3facd7-d1d4-4010-98b7-3849b8ff8476-00-2sglbaz7r92uh.kirk.replit.dev/static/ll_jobs_b1.jpg" height="320">
-      <h2 class="text-center mt-2 mb-4">About LLJOBS</h2>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet commodo nulla facilisi nullam vehicula ipsum a. Tortor posuere ac ut consequat. Purus gravida quis blandit turpis cursus in hac. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Sed enim ut sem viverra aliquet. Turpis egestas sed tempus urna et pharetra. At quis risus sed vulputate. Hendrerit dolor magna eget est lorem. Etiam sit amet nisl purus in mollis. Posuere ac ut consequat semper viverra nam. Nascetur ridiculus mus mauris vitae. Scelerisque felis imperdiet proin fermentum leo. Ut sem viverra aliquet eget sit amet tellus. Eget lorem dolor sed viverra ipsum nunc aliquet.</p>
+        {{company_name}} Careers
+      </h1>
+      <div class="row" style="margin-bottom:16px;">
+        <div class="col-md-6">
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet commodo nulla facilisi nullam vehicula ipsum a. Tortor posuere ac ut consequat. Purus gravida quis blandit turpis cursus in hac. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Sed enim ut sem viverra aliquet. Turpis egestas sed tempus urna et pharetra. At quis risus sed vulputate. Hendrerit dolor magna eget est lorem. Etiam sit amet nisl purus in mollis. Posuere ac ut consequat semper viverra nam. Nascetur ridiculus mus mauris vitae. Scelerisque felis imperdiet proin fermentum leo. Ut sem viverra aliquet eget sit amet tellus. Eget lorem dolor sed viverra ipsum nunc aliquet.
+      </p>
+        </div>
+        <div class="d-none d-md-block col-md-6">
+        <img src="/static/ll_jobs_b1.jpg" style="height:320px;border:radius:4px;">
+        </div>
+      </div>
       <h2 class="text-center">Job Openings</h2>
       <div>
         {% for job in jobs %}
@@ -27,8 +38,8 @@
       </div>
       <div class="text-center">
       <button class="btn btn-primary btn-lg">Contact Us</button>
-      <p class="mt-4">Copyright 2024 Logic-labs</p>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body>
 </html>
