--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,8 +13,8 @@
       {% endif %}
     </div>
     <div class="col-3">
-      <button type="button" class="btn btn-outline-success">
+      <a href="mailto:hello@lljobs.api subject=Application for {{job['title']}}" type="button" class="btn btn-outline-success">
           Apply
-      </button>
+      </a>
     </div>  
 </div>
