--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
         {% endfor %}
       </div>
       <div class="text-center">
-      <button class="btn btn-primary btn-lg">Contact Us</button>
+      <a class="btn btn-primary btn-lg" href=" mailto:hello@lljobs.api?subject=Question%20about%20job%20openings&body=My%20Name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20questions%3A%3Center%20question%20here%3E%0D%0A%0D%0A">Contact Us</a>
       </div>
     </div>
     {% include 'footer.html' %}
