--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,7 +13,7 @@
       {% endif %}
     </div>
     <div class="col-3">
-      <a href="mailto:hello@lljobs.api subject=Application for {{job['title']}}" type="button" class="btn btn-outline-success">
+      <a href=" mailto:hello@lljobs.api?subject=Application%20for%20{{job['title']}}&body=My%20Name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20Resume%20link%3A%20%3Cresume%20link%3E%0D%0A%0D%0AMy%20Linkedin%20link%3A%20%3Clinkdin%20link%20here%3E%0D%0A%0D%0A" type="button" class="btn btn-outline-success">
           Apply
       </a>
     </div>  
